--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -57,7 +57,7 @@ GAME_TEST_OBJS =
 GAME_INCLUDES =
 
 GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o \
-	shot.o lock.o driver.o match.o kickback.o
+	shot.o lock.o driver.o match.o kickback.o freekick.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
 
