Numerous changes to support WPC Alpha-Numeric:
* Funhouse ROM now compiles and runs.  It is built as a
256KB ROM like L-9, although it should be easy to build
128KB as well.

* Lots of DMD-specific code has been turned into no-ops.
The system is fairly dull since it doesn't write to
the display.

* Alphanumeric infrastructure is mostly in place though.
An RTT was added for driving the segments and tested.
Segment characters are mostly correct.

* Added writew() function, which writes an atomic 16-bit
I/O register.  Used to write the segment values, faster
than two writeb()s.

* Init changed to call seg_init() instead of dmd_init().

* Many DMD-only test mode functions are completely removed now.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -40,7 +40,7 @@ KERNEL_HW_OBJS += $(if $(CONFIG_AC), kernel/ac.o)
 KERNEL_HW_OBJS += kernel/adj.o
 KERNEL_HW_OBJS += kernel/audit.o
 KERNEL_HW_OBJS += kernel/csum.o
-KERNEL_HW_OBJS += $(if $(CONFIG_DMD), kernel/dmd.o)
+KERNEL_HW_OBJS += $(if $(CONFIG_DMD),kernel/dmd.o,kernel/segment.o)
 KERNEL_HW_OBJS += $(if $(CONFIG_WHITESTAR),,kernel/flip.o)
 KERNEL_HW_OBJS += kernel/freetimer.o   # could be KERNEL_SW_OBJS
                                        # except for RTT.
