--- a/test/Makefile
+++ b/test/Makefile
@@ -3,7 +3,7 @@ TEST_OBJS += test/window.o
 
 TEST2_OBJS += test/format.o
 TEST2_OBJS += test/preset.o
-TEST2_OBJS += test/swtest.o
-TEST2_OBJS += test/dmdtest.o
+TEST2_OBJS += $(if $(CONFIG_DMD),test/swtest.o)
+TEST2_OBJS += $(if $(CONFIG_DMD),test/dmdtest.o)
 TEST2_OBJS += test/adjust.o
 
