Next batch of new image linking updates:
- Multiple config files are supported.  The platform and machines can
each declare separate files, and all will be parsed to generate the
image map.
- frame_draw() function always works in 4-color mode now.
- Amode FreeWPC logo now uses the new image exclusively.
- Added a linker script for Twilight Zone images.
- imgld can invert an image before loading it, by prefixing the filename
  with '!'
- Frame test converted over to the new scheme.  Page up/down supported.
- Color thresholds changed.
- Header byte inserted for frame type (always zero now, for
uncompressed).  The type is kept in a new field in the 'buf'
structure.
- Added some error checking, e.g. missing image files

--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -80,3 +80,5 @@ FIF_SRCS += $(M)/ballborder.fif $(M)/brianhead.fif $(M)/city.fif \
 	$(M)/coinstack.fif $(M)/hitcher.fif $(M)/oldcar.fif \
 	$(M)/pyramid.fif $(M)/robot.fif
 
+IMAGE_MAP += $(M)/tz.ild
+
