--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -20,28 +20,32 @@ HOST_LFLAGS += -pg
 endif
 
 # Additional object files to be linked into the kernel region
-KERNEL_OBJS += $(D)/main.o $(D)/switch.o $(D)/task.o $(D)/section.o \
+NATIVE_OBJS := $(D)/main.o $(D)/switch.o $(D)/task.o $(D)/section.o \
 	$(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o \
 	$(D)/ball.o $(D)/signal.o $(D)/hwtimer.o $(D)/sound.o \
 	$(D)/coil.o
 
 # For ASCII DMD
-KERNEL_OBJS += $(if $(CONFIG_DMD), $(D)/asciidmd.o, $(D)/segment.o)
-KERNEL_OBJS += $(if $(CONFIG_DMD), tools/imglib/imglib.o)
+NATIVE_OBJS += $(if $(CONFIG_DMD), $(D)/asciidmd.o, $(D)/segment.o)
+NATIVE_OBJS += $(if $(CONFIG_DMD), tools/imglib/imglib.o)
 $(D)/asciidmd.o : CFLAGS += -Itools/imglib
 
 # When using the curses UI (default for now)
 CFLAGS += -DCONFIG_UI -DCURSES
 HOST_LIBS += -lncurses
-KERNEL_OBJS += $(D)/ui_curses.o
+NATIVE_OBJS += $(D)/ui_curses.o
 
 # Add machine type flags
 CFLAGS += $(if $(CONFIG_DMD), -DMACHINE_DMD=1)
 
 CFLAGS += -DMACHINE_SHORTNAME=\"$(MACHINE)\"
 
+IMAGE_MAP += platform/wpc/wpc.ild
+
 # CALLSET_ENTRYs in the simulator directory work too!
 CALLSET_FLAGS += -D $(D)
+
+FIRST_BANK=0
 
 # Invoke 'make attach' to start up a GDB session that attaches itself to
 # a running instance of the native mode program.
