--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -24,11 +24,11 @@ KERNEL_HW_OBJS += kernel/audio.o
 KERNEL_SW_OBJS += kernel/deff.o
 KERNEL_SW_OBJS += $(if $(CONFIG_FONT), kernel/font.o)
 KERNEL_SW_OBJS += kernel/game.o
+KERNEL_SW_OBJS += kernel/ladder.o
 KERNEL_SW_OBJS += kernel/lamplist.o
 KERNEL_SW_OBJS += kernel/player.o
 KERNEL_SW_OBJS += kernel/printf.o
 KERNEL_SW_OBJS += $(if $(CONFIG_WHITESTAR),,kernel/score.o)
-
 
 # Hardware kernel modules are incredibly hardware dependent,
 # and are subject to change on different hardware platforms.
