--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -31,6 +31,7 @@ FON_OBJS += $(if $(CONFIG_FON_ADDLG), fonts/free/addlg.o)
 FON_OBJS += $(if $(CONFIG_FON_AMBITSEK), fonts/free/ambitsek.o)
 FON_OBJS += $(if $(CONFIG_FON_ARCADEPI), fonts/free/arcadepi.o)
 FON_OBJS += $(if $(CONFIG_FON_MICRON55), fonts/free/micron55.o)
+FON_OBJS += $(if $(CONFIG_FON_PCSENIOR), fonts/free/pcsenior.o)
 FON_OBJS += $(if $(CONFIG_FON_PIXCHICAGO), fonts/free/pixchicago.o)
 FON_OBJS += $(if $(CONFIG_FON_PX_SANS_NOUVEAUX), fonts/free/px_sans_nouveaux.o)
 FON_OBJS += $(if $(CONFIG_FON_UNI05_53), fonts/free/uni05_53.o)
