Add support for timestamp audits. 	Currently this tracks total game time for all players. 	The rendering per-game or per-credit is not coded yet.
Added a new event, 'end_player'.  The intent is to call this to save
away per player audits.  At present that doesn't work if the game is
aborted.

Removed some deff_stop() calls on background effects.  This happens
automatically.

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,4 +6,4 @@ TEST2_OBJS += test/preset.o
 TEST2_OBJS += $(if $(CONFIG_DMD),test/swtest.o)
 TEST2_OBJS += $(if $(CONFIG_DMD),test/dmdtest.o)
 TEST2_OBJS += test/adjust.o
-
+TEST2_OBJS += test/timestamp.o
