--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -23,6 +23,7 @@ CONFIG_ANIMATION ?= $(CONFIG_DMD)
 # 1. -Wno-format is to not check format strings, because we define those
 # differently than ANSI C does (e.g. look at sprintf()).
 INT_CFLAGS = -mint8
+# TODO : Don't hardcode code/data sections here like this!
 CFLAGS += $(INT_CFLAGS) -DHAVE_NVRAM -mdirect -DCONFIG_PLATFORM_WPC -mwpc -fno-builtin -mcode-section=.text -mdata-section=.text -mbss-section=ram -Wno-format
 EXTRA_ASFLAGS += -DCONFIG_PLATFORM_WPC
 
