--- a/test/Makefile
+++ b/test/Makefile
@@ -7,3 +7,4 @@ TEST2_OBJS += $(if $(CONFIG_DMD),test/swtest.o)
 TEST2_OBJS += $(if $(CONFIG_DMD),test/dmdtest.o)
 TEST2_OBJS += test/adjust.o
 TEST2_OBJS += test/timestamp.o
+TEST2_OBJS += test/stress.o
