WCS: Light skill shot based on 'serve_ball' event; add more sounds; improve kickback power.

--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -64,7 +64,8 @@ GAME_INCLUDES =
 GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o \
 	shot.o lock.o driver.o kickback.o freekick.o \
 	toplane.o deffs.o jets.o goal_round.o \
-	combo.o multiball.o tv.o leffs.o mode.o ultra.o
+	combo.o multiball.o tv.o leffs.o mode.o ultra.o \
+	effect.o skill.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
 
