--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -69,4 +69,7 @@ GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o \
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
 
-SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h build/lower_jet.h build/upper_jet.h build/kickback_driver.h build/spinner.h build/gate.h build/spinning_ball.h build/goalie.h
+SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h build/lower_jet.h build/upper_jet.h \
+	build/kickback_driver.h build/spinner.h build/gate.h build/spinning_ball.h build/goalie.h \
+	build/lock_magnet.h build/magna_goalie.h
+
