--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -65,7 +65,8 @@ GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o \
 	shot.o lock.o driver.o kickback.o freekick.o \
 	toplane.o deffs.o jets.o goal_round.o \
 	combo.o multiball.o tv.o leffs.o mode.o ultra.o \
-	effect.o skill.o rampdiv.o magna_goalie.o penalty.o
+	effect.o skill.o rampdiv.o magna_goalie.o penalty.o \
+	quickmb.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
 
