Breakup init.c into four smaller files:
- init.c remains generic initialization
- init-wpc.c has the WPC-specific parts of init.
- error.c has fatal() and nonfatal() APIs.
- interrupt.c has the WPC-specific static interrupt handlers.

Also genericize name of zerocross check API.

--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -36,6 +36,8 @@ EXTRA_ASFLAGS += -DCONFIG_PLATFORM_WPC
 # Say which source files need to be compiled in for the WPC platform only.
 # Use KERNEL_HW_OBJS for C sources, and KERNEL_ASM_OBJS for assembler files.
 KERNEL_HW_OBJS += $(P)/main.o
+KERNEL_HW_OBJS += $(P)/interrupt.o
+KERNEL_HW_OBJS += $(P)/init-wpc.o
 KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/bitmap.o)
 KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/dmd.o)
 KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/dot.o)
