Move 6809-specific files out of the WPC platform directory, into the 6809 directory.

--- a/cpu/m6809/Makefile
+++ b/cpu/m6809/Makefile
@@ -2,7 +2,7 @@
 # Root directory for the CPU files.  TODO: move
 # the code to cpu/m6809 and change $(C) accordingly.
 CPU := m6809
-C := platform/wpc
+C := cpu/$(CPU)
 
 CFLAGS =
 
@@ -39,5 +39,5 @@ KERNEL_ASM_OBJS += $(C)/farcall.o
 KERNEL_OBJS     += $(if $(CONFIG_TASK), $(C)/task.o)
 KERNEL_ASM_OBJS += $(if $(CONFIG_TASK), $(C)/task_6809.o)
 KERNEL_OBJS     += $(if $(CONFIG_MALLOC), $(C)/malloc.o)
-KERNEL_OBJS     += cpu/m6809/string.o
-KERNEL_ASM_OBJS += cpu/m6809/bcd_string.o
+KERNEL_OBJS     += $(C)/string.o
+KERNEL_ASM_OBJS += $(C)/bcd_string.o
