WCS: More rules updates

--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -66,7 +66,7 @@ GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o \
 	toplane.o deffs.o jets.o goal_round.o \
 	combo.o multiball.o tv.o leffs.o mode.o ultra.o \
 	effect.o skill.o rampdiv.o magna_goalie.o penalty.o \
-	quickmb.o
+	quickmb.o city.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
 
