--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -38,7 +38,7 @@ KERNEL_HW_OBJS += $(if $(CONFIG_AC), kernel/ac.o)
 KERNEL_HW_OBJS += kernel/adj.o
 KERNEL_HW_OBJS += kernel/audit.o
 KERNEL_HW_OBJS += kernel/csum.o
-KERNEL_HW_OBJS += $(if $(CONFIG_DMD),kernel/dmd.o,kernel/segment.o)
+KERNEL_HW_OBJS += $(if $(CONFIG_DMD),kernel/dmd.o)
 KERNEL_HW_OBJS += kernel/error.o
 KERNEL_HW_OBJS += $(if $(CONFIG_WHITESTAR),,kernel/flip.o)
 KERNEL_HW_OBJS += kernel/freetimer.o   # could be KERNEL_SW_OBJS
@@ -47,6 +47,7 @@ KERNEL_HW_OBJS += kernel/init.o
 KERNEL_HW_OBJS += kernel/lamp.o
 KERNEL_HW_OBJS += kernel/leff.o   # why not KERNEL_SW_OBJS?
 KERNEL_HW_OBJS += kernel/message.o
+KERNEL_HW_OBJS += $(if $(CONFIG_ALPHA),kernel/segment.o)
 KERNEL_HW_OBJS += kernel/sol.o
 KERNEL_HW_OBJS += kernel/sound.o
 KERNEL_HW_OBJS += kernel/switches.o
