Funhouse: major update to rules, now making it somewhat playable:
- Added game clock module
- Added adjustments/audits
- Added lamp effects
- Added multiball rules (not quite the real deal but close)
- Added Mystery Mirror rules
- Added Rudy eye motion to follow ball around
- Added more sound effects to shots
- Added Bonus effect

--- a/machine/funhouse/Makefile
+++ b/machine/funhouse/Makefile
@@ -52,7 +52,8 @@ PINMAME_OTHER_ROMS = fh_u*
 
 GAME_OBJS =
 
-GAME_PAGED_OBJS = shot.o leffs.o rudy.o
+GAME_PAGED_OBJS = shot.o leffs.o rudy.o trivial.o mirror.o \
+	mb.o clock.o
 
 GAME_INCLUDES =
 
