FH: Major update to rules, drivers, etc.
This version of Funhouse is quite playable.  It implements many
(but certainly not all) of the original game rules, nothing new.

--- a/machine/funhouse/Makefile
+++ b/machine/funhouse/Makefile
@@ -53,11 +53,11 @@ PINMAME_OTHER_ROMS = fh_u*
 GAME_OBJS =
 
 GAME_PAGED_OBJS = shot.o leffs.o rudy.o trivial.o mirror.o \
-	mb.o clock.o
+	mb.o clock.o steps.o quickmb.o superdog.o jets.o
 
 GAME_INCLUDES =
 
 SCHED_HEADERS += build/left_sling.h build/right_sling.h \
 	build/left_jet.h build/right_jet.h build/lower_jet.h \
-	build/ramp_div.h build/steps_gate.h build/eye_direction.h
+	build/ramp_div.h build/eye_direction.h build/steps_gate.h
 
