--- a/machine/funhouse/Makefile
+++ b/machine/funhouse/Makefile
@@ -53,7 +53,8 @@ PINMAME_OTHER_ROMS = fh_u*
 GAME_OBJS =
 
 GAME_PAGED_OBJS = shot.o leffs.o rudy.o trivial.o mirror.o \
-	mb.o clock.o steps.o quickmb.o superdog.o jets.o
+	mb.o clock.o steps.o quickmb.o superdog.o jets.o \
+	frenzy.o trapdoor.o gangway.o
 
 GAME_INCLUDES =
 
