--- a/common/Makefile
+++ b/common/Makefile
@@ -11,7 +11,7 @@ COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLAYABLE), common/ballsave.o)
 COMMON_BASIC_OBJS +=	common/coin.o
 COMMON_BASIC_OBJS +=	common/db.o
 COMMON_BASIC_OBJS +=	common/event-audit.o
-COMMON_BASIC_OBJS +=	common/flipcode.o
+COMMON_BASIC_OBJS +=	$(if $(CONFIG_PIC),,common/flipcode.o)
 COMMON_BASIC_OBJS +=	common/initials.o
 COMMON_BASIC_OBJS +=	common/leffs.o
 COMMON_BASIC_OBJS +=	common/locale.o
