Breakout realtime emulation into a separate source file.
A generic realtime generator now throws the 'realtime_tick' event
every one millisecond, which can be handled however.  There are
possibilities for reuse of this code in other ways.

--- a/cpu/native/Makefile
+++ b/cpu/native/Makefile
@@ -1,6 +1,6 @@
 
 # Root directory for native mode compiler.
-CPU := m6809
+CPU := native
 C := cpu/$(CPU)
 
 CFLAGS =
@@ -25,4 +25,8 @@ ifeq ($(CONFIG_CURSES), y)
 CFLAGS += -DCONFIG_UI -DCURSES
 HOST_LIBS += -lncurses
 NATIVE_OBJS += $(D)/ui_curses.o
+endif
+
+ifeq ($(CONFIG_SOFT_REALTIME), y)
+NATIVE_OBJS += $(C)/realtime.o
 endif
