--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -11,6 +11,7 @@ NATIVE_OBJS :=
 CPU := native
 CONFIG_PTH := y
 CONFIG_CURSES := y
+CONFIG_SOFT_REALTIME := y
 include cpu/$(CPU)/Makefile
 
 # Subplatform support
