--- a/common/Makefile
+++ b/common/Makefile
@@ -17,7 +17,7 @@ COMMON_BASIC_OBJS +=	common/leffs.o
 COMMON_BASIC_OBJS +=	common/locale.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLAYABLE), common/match.o)
 COMMON_BASIC_OBJS +=	common/optocheck.o
-COMMON_BASIC_OBJS +=	$(if $(CONFIG_PIC), common/pic.o)
+INIT_OBJS         +=	$(if $(CONFIG_PIC), common/pic.o)
 COMMON_BASIC_OBJS +=	common/plunger.o
 COMMON_BASIC_OBJS +=	common/printer.o
 COMMON_BASIC_OBJS +=	common/reset.o
