--- a/machine/funhouse/Makefile
+++ b/machine/funhouse/Makefile
@@ -57,7 +57,7 @@ GAME_OBJS = mouth.o
 
 GAME_PAGED_OBJS = shot.o leffs.o rudy.o trivial.o mirror.o \
 	mb.o clock.o steps.o quickmb.o superdog.o jets.o \
-	frenzy.o trapdoor.o gangway.o
+	frenzy.o trapdoor.o gangway.o rules.o
 
 GAME_INCLUDES =
 
