Implement mute-and-pause mode.
It is currently only configured in for TZ.  The machine must have
a buyin button to use it.  It has not been extensively tested.

--- a/common/Makefile
+++ b/common/Makefile
@@ -18,6 +18,7 @@ COMMON_BASIC_OBJS +=	common/leffs.o
 COMMON_BASIC_OBJS +=	common/locale.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLAYABLE), common/match.o)
 COMMON_BASIC_OBJS +=	common/optocheck.o
+COMMON_BASIC_OBJS += $(if $(CONFIG_MUTE_PAUSE), common/pause.o)
 COMMON_BASIC_OBJS +=	common/plunger.o
 COMMON_BASIC_OBJS +=	common/printer.o
 COMMON_BASIC_OBJS +=	common/reset.o
