Adding in door and slot animations, general tidy up of other ones. Changed Frame limit to be a U16

--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -65,9 +65,9 @@ SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h build/r
 	build/left_mpf.h build/right_mpf.h
 
 GAME_OBJS = clock.o magnet.o sling.o jets.o autofire.o gumball.o \
-	config.o loop.o leffs.o amode.o rampdiv.o bonus.o
+	config.o loop.o leffs.o rampdiv.o bonus.o amode.o
 
-GAME_TEST_OBJS = clocktest.o magtest.o gumball_test.o powerball_test.o #thingfl_test.o
+GAME_TEST_OBJS = clocktest.o magtest.o gumball_test.o powerball_test.o
 
 GAME_INCLUDES =
 
@@ -75,9 +75,7 @@ GAME_PAGED_OBJS = lanes.o leftramp.o skill.o deadend.o camera.o \
 	unlit.o spiralaward.o spiral.o tsm.o fastlock.o door.o \
 	lock.o deffs.o multiball.o star.o \
 	rightramp.o hitch.o piano.o rocket.o slot.o greed.o \
- 	mpf.o powerball.o clockmillions.o sssmb.o chaosmb.o
-
-#GAME2_OBJS = thingfl.o
+ 	mpf.o powerball.o clockmillions.o sssmb.o chaosmb.o 
 
 FIF_SRCS += images/cow.fif images/spiral.fif images/mborder.fif
 
