--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -67,7 +67,7 @@ SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h build/r
 GAME_OBJS = clock.o magnet.o sling.o jets.o autofire.o gumball.o \
 	config.o loop.o leffs.o rampdiv.o bonus.o amode.o
 
-GAME_TEST_OBJS = clocktest.o magtest.o gumball_test.o powerball_test.o
+GAME_TEST_OBJS = clocktest.o gumball_test.o powerball_test.o
 
 GAME_INCLUDES =
 
@@ -75,7 +75,7 @@ GAME_PAGED_OBJS = lanes.o leftramp.o skill.o deadend.o camera.o \
 	unlit.o spiralaward.o spiral.o tsm.o fastlock.o door.o \
 	lock.o deffs.o multiball.o star.o \
 	rightramp.o hitch.o piano.o rocket.o slot.o greed.o \
- 	mpf.o powerball.o clockmillions.o sssmb.o chaosmb.o 
+ 	mpf.o powerball.o clockmillions.o sssmb.o chaosmb.o
 
 FIF_SRCS += images/cow.fif images/spiral.fif images/mborder.fif
 
