Move lanes.c to GAME2_OBJS

--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -65,27 +65,21 @@ SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h build/r
 	build/left_mpf.h build/right_mpf.h
 
 GAME_OBJS = clock.o magnet.o sling.o jets.o autofire.o gumball.o \
-	config.o loop.o leffs.o rampdiv.o bonus.o amode.o
+	config.o loop.o leffs.o rampdiv.o bonus.o amode.o 
 
 GAME_TEST_OBJS = clocktest.o gumball_test.o powerball_test.o
 
 GAME_INCLUDES =
 
-GAME_PAGED_OBJS = lanes.o leftramp.o skill.o deadend.o camera.o \
+GAME_PAGED_OBJS = leftramp.o skill.o deadend.o camera.o \
 	unlit.o spiralaward.o spiral.o tsm.o fastlock.o door.o \
-	lock.o deffs.o multiball.o star.o 
+ 	rightramp.o hitch.o piano.o rocket.o slot.o greed.o \
+	mpf.o powerball.o clockmillions.o chaosmb.o \
+	multiball.o star.o sssmb.o deffs.o lock.o
 
-<<<<<<< HEAD:machine/tz/Makefile
-GAME2_OBJS = rightramp.o hitch.o piano.o rocket.o slot.o greed.o \
- 	mpf.o powerball.o clockmillions.o sssmb.o chaosmb.o
-FIF_SRCS += images/cow.fif images/spiral.fif images/mborder.fif
+GAME2_OBJS = lanes.o
 
-FIF_SRCS += $(M)/ballborder.fif $(M)/brianhead.fif $(M)/city.fif \
-	$(M)/coinstack.fif $(M)/hitcher.fif $(M)/oldcar.fif \
-	$(M)/pyramid.fif $(M)/robot.fif
-=======
 FIF_SRCS += images/cow.fif
->>>>>>> e98b17473fa499ff55ef4cace263c8bdb356ec1c:machine/tz/Makefile
 
 IMAGE_MAP += $(M)/tz.ild
 
