--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -65,19 +65,19 @@ SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h build/r
 	build/left_mpf.h build/right_mpf.h
 
 GAME_OBJS = clock.o magnet.o sling.o jets.o autofire.o gumball.o \
-	config.o loop.o leffs.o rampdiv.o bonus.o amode.o 
+	config.o loop.o rampdiv.o bonus.o amode.o
 
 GAME_TEST_OBJS = clocktest.o gumball_test.o powerball_test.o
 
 GAME_INCLUDES =
 
 GAME_PAGED_OBJS = leftramp.o skill.o deadend.o camera.o \
-	spiral.o tsm.o fastlock.o door.o \
- 	rightramp.o hitch.o piano.o rocket.o slot.o greed.o \
-	mpf.o clockmillions.o powerball.o chaosmb.o \
+	spiral.o tsm.o fastlock.o door.o rocket.o \
+ 	rightramp.o hitch.o piano.o slot.o greed.o \
+	mpf.o clockmillions.o chaosmb.o powerball.o \
 	multiball.o star.o sssmb.o deffs.o lock.o
 
-GAME2_OBJS = lanes.o unlit.o spiralaward.o
+GAME2_OBJS = lanes.o unlit.o spiralaward.o leffs.o
 
 FIF_SRCS += images/cow.fif
 
